--- a/app/elements/networks-list-element.html
+++ b/app/elements/networks-list-element.html
@@ -32,7 +32,7 @@
         <div hidden$="[[!hasNetworks]]" class="info-list">
           <div class="info-head flex-horizontal-with-ratios">
             <div class="flexchild">
-              <paper-checkbox checked="[[selectAll]]" on-tap="_selectAllChanged"></paper-checkbox> Νame
+              <paper-checkbox disabled$="[[!hasSelectableNetworks]]" checked="[[selectAll]]" on-tap="_selectAllChanged"></paper-checkbox> Νame
             </div>
             <div class="flexchild">Type</div>
             <div class="flexchild">Provider</div>
@@ -91,6 +91,10 @@
             type: Boolean,
             value: false
           },
+          hasSelectableNetworks: {
+            type: Boolean,
+            value: false
+          },
           showSearchOption: {
             type: Boolean,
             value: false
@@ -136,6 +140,8 @@
           this.set('showEditOption', selectedNetworks.base.length == 1);
 
           this.set('hasNetworks', networks.base.length > 0);
+
+          this.set('hasSelectableNetworks', selectableNetworks.base.length > 0);
 
           if (selectedNetworks.base.length < selectableNetworks.base.length || selectableNetworks.base.length === 0) {
             this.set('selectAll', false);
