--- a/app/elements/dialog-element.html
+++ b/app/elements/dialog-element.html
@@ -30,13 +30,11 @@
         <!-- <paper-button class="btn-block submit-btn" raised dialog-confirm>Submit</paper-button> -->
 
         <div class="clearfix btn-group">
-          <paper-button class="purple" raised dialog-confirm>Yes</paper-button>
           <paper-button class="purple" raised dialog-dismiss>No</paper-button>
+          <paper-button class="purple" raised dialog-confirm>Yes</paper-button>
         </div>
       </paper-dialog-scrollable>
     </paper-dialog>
-
-    <iron-signals on-iron-signal-marios="_openDialog"></iron-signals>
   </template>
 
   <script>
@@ -52,6 +50,10 @@
             value: null
           },
           body: {
+            type: String,
+            value: null
+          },
+          reason: {
             type: String,
             value: null
           }
@@ -71,8 +73,12 @@
         _modalClosed: function(e) {
           if (e.srcElement.id == 'dialogModal') {
             console.log(this.$.dialogModal.closingReason);
-            this.fire('confirmationResponce', {
-              response: this.$.dialogModal.closingReason
+            this.fire('iron-signal', {
+              name: 'confirmation',
+              data: {
+                response: this.$.dialogModal.closingReason,
+                reason: this.reason
+              }
             });
           }
         }
