remove manual close handlers for paper-dialog elements

--- a/app/elements/dialog-element.html
+++ b/app/elements/dialog-element.html
@@ -21,7 +21,7 @@
 
     <paper-dialog id="dialogModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       <h2>[[title]]</h2>
-      <paper-icon-button icon="clear" class="close" on-tap="_closeDialog" dialog-dismiss></paper-icon-button>
+      <paper-icon-button icon="clear" class="close" dialog-dismiss></paper-icon-button>
       <paper-dialog-scrollable>
         <p class="text-center">
           [[body]]
