--- a/app/elements/script-edit-element.html
+++ b/app/elements/script-edit-element.html
@@ -19,7 +19,7 @@
 
     <paper-dialog id="editScriptModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       <h2>Edit Script</h2>
-      <paper-icon-button class="close" icon="clear" on-tap="_closeEditScriptModal"></paper-icon-button>
+      <paper-icon-button class="close" icon="clear" dialog-dismiss></paper-icon-button>
       <paper-dialog-scrollable>
         <paper-input id="name" label="Name" error-message="Please enter script's name" value="{{script.name}}"></paper-input>
 
