--- a/app/elements/key-add-element.html
+++ b/app/elements/key-add-element.html
@@ -20,7 +20,7 @@
 
     <paper-dialog id="addKeyModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       <h2>Add Key</h2>
-      <paper-icon-button class="close" icon="clear" on-tap="_closeAddKeyModal"></paper-icon-button>
+      <paper-icon-button class="close" icon="clear" dialog-dismiss></paper-icon-button>
       <paper-dialog-scrollable>
         <paper-input id="name" label="Name" required allowed-pattern="[A-Za-z0-9]" error-message="Please enter key's name" value="{{key.name}}"></paper-input>
 
