--- a/app/elements/key-edit-element.html
+++ b/app/elements/key-edit-element.html
@@ -19,7 +19,7 @@
 
     <paper-dialog id="editKeyModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       <h2>Edit Key</h2>
-      <paper-icon-button class="close" icon="clear" on-tap="_closeEditKeyModal"></paper-icon-button>
+      <paper-icon-button class="close" icon="clear" dialog-dismiss></paper-icon-button>
       <paper-dialog-scrollable>
         <paper-input id="name" label="Name" required allowed-pattern="[A-Za-z0-9]" error-message="Please enter key's name" value="{{key.id}}"></paper-input>
 
