--- a/app/elements/register-element.html
+++ b/app/elements/register-element.html
@@ -29,7 +29,7 @@
 
     <paper-dialog id="registerModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       <h2>Register</h2>
-      <paper-icon-button class="close" icon="clear" on-tap="_closeRegisterModal"></paper-icon-button>
+      <paper-icon-button class="close" icon="clear" dialog-dismiss></paper-icon-button>
       <paper-dialog-scrollable>
         <paper-input id="name" label="Name" required error-message="Please enter your name" value="{{user.name}}"></paper-input>
 
