--- a/app/elements/script-run-element.html
+++ b/app/elements/script-run-element.html
@@ -19,7 +19,7 @@
 
     <paper-dialog id="runScriptModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       <h2>Run Script</h2>
-      <paper-icon-button class="close" icon="clear" on-tap="_closeRunScriptModal"></paper-icon-button>
+      <paper-icon-button class="close" icon="clear" dialog-dismiss></paper-icon-button>
       <paper-dialog-scrollable>
         <div hidden$=[[!hasMachines]]>
           <paper-dropdown-menu class="dropdown-block" label="Select machine" horizontal-align="left">
