--- a/app/elements/key-add-element.html
+++ b/app/elements/key-add-element.html
@@ -31,6 +31,7 @@
         <div class="clearfix btn-group">
           <paper-button class="purple" raised on-tap="_generateKeyAjax">Generate</paper-button>
           <paper-button class="purple" raised on-tap="_uploadKey">Upload</paper-button>
+          <input type="file" name="file" value="{{key.file}}" on-change="_uploadFile" hidden id="keyUpload" />
         </div>
 
         <paper-button class="submit-btn btn-block" disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
@@ -55,7 +56,8 @@
               return {
                 name: '',
                 publicKey: '',
-                privateKey: ''
+                privateKey: '',
+                file: ''
               }
             },
             notify: true
@@ -100,6 +102,10 @@
         },
         _uploadKey: function(e) {
           console.log('upload');
+          this.$.keyUpload.click();
+        },
+        _uploadFile: function(e) {
+          console.log(e);
         },
         _modalClosed: function() {
           this._formReset();
