--- a/app/elements/networks-list-element.html
+++ b/app/elements/networks-list-element.html
@@ -33,14 +33,17 @@
           <div class="info-head flex-horizontal-with-ratios">
             <div class="flexchild">
               <paper-checkbox disabled$="[[!hasSelectableNetworks]]" checked="[[selectAll]]" on-tap="_selectAllChanged"></paper-checkbox> Νame
+              <paper-icon-button icon="expand-more" on-tap="_sortNetworks" sort-option="name"></paper-icon-button>
             </div>
             <div class="flexchild">Type</div>
-            <div class="flexchild">Provider</div>
+            <div class="flexchild">Provider
+              <paper-icon-button icon="expand-more" on-tap="_sortNetworks" sort-option="provider"></paper-icon-button>
+            </div>
           </div>
           <div class="info-body">
-            <iron-list items="[[filteredNetworks]]" as="network" sort="_computeSort">
+            <iron-list items="[[sortedNetworks]]" as="network" selected-items="{{selectedNetworks}}" multi-selection>
               <template>
-                <network-item-element network="[[network]]"></network-item-element>
+                <network-item-element selected="{{selected}}" network="[[network]]"></network-item-element>
               </template>
             </iron-list>
           </div>
@@ -51,8 +54,6 @@
         </p>
       </div>
     </paper-card>
-
-    <array-selector id="selector" items="[[filteredNetworks]]" selected="{{selectedNetworks}}" multi toggle></array-selector>
 
     <paper-fab id="addBtn" icon="add" on-tap="_openAddNetworkPage"></paper-fab>
   </template>
@@ -78,6 +79,9 @@
           selectableNetworks: {
             type: Array,
             computed: '_computeSelectableNetworks(networks.*)'
+          },
+          sortedNetworks: {
+            type: Array
           },
           selectedNetwork: {
             type: Object,
@@ -107,10 +111,15 @@
             type: String,
             value: '',
             notify: true
+          },
+          sortByTerm: {
+            type: String,
+            value: 'name'
           }
         },
         observers: [
-          '_networksChanged(networks.*, selectableNetworks.*, selectedNetworks.*)'
+          '_networksChanged(networks.*, selectableNetworks.*, selectedNetworks.*)',
+          '_filteredNetworksChanged(filteredNetworks.*, sortByTerm)'
         ],
         listeners: {
           'toggleSelectedNetwork': '_toggleSelectedNetwork',
@@ -122,15 +131,47 @@
             return network.cloud.provider == 'openstack';
           });
         },
-        _computeSort: function(a, b) {
-          return a.isDefault === b.isDefault ? 0 : (a.isDefault ? -1 : 1);
-        },
         _computeFilteredNetworks: function(networks, searchTerm) {
           var searchTerm = searchTerm.toLowerCase();
           return networks.base.filter(function(network) {
             var name = network.name.toLowerCase();
             return name.indexOf(searchTerm) != -1;
           });
+        },
+        _filteredNetworksChanged: function(filteredNetworks, sortByTerm) {
+          var sortedNetworks = [];
+          if (sortByTerm == 'name') {
+            sortedNetworks = filteredNetworks.base.sort(this._computeSort('name', 1));
+          } else if (sortByTerm == 'provider') {
+            sortedNetworks = filteredNetworks.base.sort(this._computeSort('cloud.provider', 1));
+          } else {
+            sortedNetworks = filteredNetworks.base;
+          }
+          this.set('sortedNetworks', sortedNetworks);
+          this.querySelector('iron-list').notifyResize();
+        },
+        _sortNetworks: function(e) {
+          var sortByTerm = e.currentTarget.getAttribute('sort-option');
+          this.set('sortByTerm', sortByTerm);
+        },
+        _computeSort: function(property, order) {
+          var property = property.split('.'),
+          len = property.length;
+
+          return function(a, b) {
+            var i = 0;
+            while (i < len) {
+              a = a[property[i]];
+              b = b[property[i]];
+              i++;
+            }
+
+            if (a === b) {
+              return 0;
+            }
+
+            return (order * (a > b ? 1 : -1));
+          };
         },
         _networksChanged: function(networks, selectableNetworks, selectedNetworks) {
           this.set('selectedNetwork', selectedNetworks.base.length == 1 ? selectedNetworks.base[0] : null);
@@ -153,7 +194,7 @@
         },
         _selectAllChanged: function(e) {
           var selectAll = !this.selectAll,
-            els = Polymer.dom(this.root).querySelectorAll('network-item-element');
+            els = this.querySelectorAll('network-item-element');
 
           this.set('selectAll', selectAll);
           [].forEach.call(els, function(el, index) {
@@ -161,7 +202,15 @@
           }, this);
         },
         _toggleSelectedNetwork: function(e) {
-          this.$.selector.select(e.detail.network);
+          console.log(e);
+          var selected = e.detail.selected,
+            network = e.detail.network;
+          if (selected) {
+            this.querySelector('iron-list').selectItem(network);
+          } else {
+            this.querySelector('iron-list').deselectItem(network);
+          }
+          console.log(this.networks, this.filteredNetworks, this.selectedNetworks);
         },
         _toggleSearchSelected: function() {
           var showSearchOption = !this.showSearchOption;
@@ -172,12 +221,12 @@
           }
         },
         _deleteSelected: function(e) {
-          this.selectedNetworks.forEach(function(el, index) {
+          console.log(this.selectedNetworks);
+          this.selectedNetworks.slice().forEach(function(el, index) {
             var index = this.networks.indexOf(el);
             this.splice('networks', index, 1);
           }, this);
-          this.$.selector.clearSelection();
-          console.log(this.networks, this.selectedNetworks);
+          console.log(this.networks, this.filteredNetworks, this.selectedNetworks);
         },
         _updateSelectedNetwork: function(e) {
           var network = e.detail.network,
