--- a/app/elements/keys-list-element.html
+++ b/app/elements/keys-list-element.html
@@ -55,9 +55,9 @@
             </div>
           </div>
           <div class="info-body">
-            <iron-list items="[[sortedKeys]]" as="key">
+            <iron-list items="[[sortedKeys]]" as="key" selected-items="{{selectedKeys}}" multi-selection>
               <template>
-                <key-item-element key="[[key]]"></key-item-element>
+                <key-item-element selected="{{selected}}" key="[[key]]"></key-item-element>
               </template>
             </iron-list>
           </div>
@@ -68,8 +68,6 @@
         </p>
       </div>
     </paper-card>
-
-    <array-selector id="selector" items="[[sortedKeys]]" selected="{{selectedKeys}}" multi toggle></array-selector>
 
     <paper-fab id="addBtn" icon="add" on-tap="_openAddKeyModal"></paper-fab>
     <key-add-element></key-add-element>
@@ -95,8 +93,7 @@
             computed: '_computeFilteredKeys(keys.*, searchTerm)'
           },
           sortedKeys: {
-            type: Array,
-            // computed: '_computeSortedKeys(filteredKeys.*, sortByTerm)'
+            type: Array
           },
           selectedKey: {
             type: Object,
@@ -150,7 +147,6 @@
           'updateSelectedKey': '_updateSelectedKey'
         },
         _computeFilteredKeys: function(keys, searchTerm) {
-        //   console.log('filter');
           var searchTerm = searchTerm.toLowerCase();
           return keys.base.filter(function(key) {
             var id = key.id.toLowerCase();
@@ -158,7 +154,6 @@
           });
         },
         _filteredKeysChanged: function(filteredKeys, sortByTerm) {
-        //   console.log('sort');
           var sortedKeys = [];
           if (sortByTerm == 'id') {
             sortedKeys = filteredKeys.base.sort(this._computeSort('id', 1));
@@ -206,7 +201,7 @@
         },
         _selectAllChanged: function(e) {
           var selectAll = !this.selectAll,
-            els = Polymer.dom(this.root).querySelectorAll('key-item-element');
+            els = this.querySelectorAll('key-item-element');
 
           this.set('selectAll', selectAll);
           [].forEach.call(els, function(el, index) {
@@ -214,8 +209,14 @@
           });
         },
         _toggleSelectedKey: function(e) {
-        //   console.log('select');
-          this.$.selector.select(e.detail.key);
+          var selected = e.detail.selected,
+            key = e.detail.key;
+          if (selected) {
+            this.querySelector('iron-list').selectItem(key);
+          } else {
+            this.querySelector('iron-list').deselectItem(key);
+          }
+          console.log(this.keys, this.filteredKeys, this.selectedKeys);
         },
         _toggleSearchSelected: function() {
           var showSearchOption = !this.showSearchOption;
@@ -226,22 +227,20 @@
           }
         },
         _deleteSelected: function(e) {
-          this.selectedKeys.forEach(function(key, index) {
-            var index = this.sortedKeys.indexOf(key);
-            this.splice('sortedKeys', index, 1);
+          this.selectedKeys.slice().forEach(function(el, index) {
+            var index = this.sortedKeys.indexOf(el);
+            this.splice('keys', index, 1);
           }, this);
-          this.$.selector.clearSelection();
-          this.querySelector('iron-list').notifyResize();
-        //   console.log(this.selectedKeys, this.keys, this.sortedKeys);
+          console.log(this.selectedKeys, this.keys, this.sortedKeys);
         },
         _starSelected: function(e) {
           var selectedKey = this.selectedKey;
           this.sortedKeys.forEach(function(key, index) {
             this.set('sortedKeys.' + index + '.isDefault', key.id == selectedKey.id);
           }, this);
-        //   this.$.selector.clearSelection();
+          //   this.$.selector.clearSelection();
           this.querySelector('iron-list').notifyResize();
-        //   console.log(this.selectedKeys, this.keys, this.sortedKeys);
+          //   console.log(this.selectedKeys, this.keys, this.sortedKeys);
         },
         _editSelected: function(e) {
           var el = Polymer.dom(this.root).querySelector('key-edit-element');
